# ai-movie-recap

./: Cargo.toml  README.md
src/: cli.rs  clip_plan.rs  config.rs  ffmpeg.rs  generator.rs  init.rs  lib.rs  main.rs  platform.rs  script.rs  srt.rs  subtitle.rs
src/api/: elevenlabs.rs  mod.rs  openai.rs
