[package]
name = "ai-movie-shorts"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "ai-movie-shorts"
path = "src/main.rs"

[[bin]]
name = "ai-movie-cli"
path = "src/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "cookies"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async trait
async-trait = "0.1"

# Directory walking
walkdir = "2.5"

# ZIP handling for subtitle downloads
zip = "2.2"

# Temporary files
tempfile = "3.16"

# Regex for parsing
regex = "1.11"

# Random numbers
rand = "0.8"

# Time
chrono = "0.4"

# Cross-platform path handling
pathdiff = "0.2"

# UI - raylib
raylib = { version = "5.5", optional = true }

# Concurrent data structures
crossbeam = "0.8"

# Once cell for static initialization
once_cell = "1.20"

[features]
default = ["gui"]
gui = ["raylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
